# bb-sec-protocols

./: .gitignore  README.md
bb-nimble/: bb-protocols.patch
bb-portable/: CMakeLists.txt  Makefile  README.md  central.c  peripheral.c  tests.c
bb-portable/bb-lib/include/: bbstate.h  crypto.h
bb-portable/bb-lib/include/crypto/: blake2-impl.h  blake2.h  chachapoly.h
bb-portable/bb-lib/include/crypto/ecdh/: basetypes.h  curve25519.h
bb-portable/bb-lib/src/: bbstate.c  crypto.c
bb-portable/bb-lib/src/crypto/: blake2b.c  chachapoly.c  curve25519.c
bb-portable/bb-lib/src/crypto/ascon/: ascon_aead128.c  ascon_aead128a.c  ascon_aead80pq.c  ascon_aead_common.c  ascon_buffering.c  ascon_hash.c  ascon_internal.h  ascon_permutations.c
